[metadata]
name = dalle_mini
version = attr: dalle_mini.__version__
description = DALL·E mini - Generate images from a text prompt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/borisdayma/dalle-mini
project_urls =
    Bug Tracker = https://github.com/borisdayma/dalle-mini/issues

[options]
packages = find:
install_requires =
    transformers
    unidecode
    ftfy
    pillow
    jax
    flax

[options.extras_require]
dev =
    tqdm
    wandb
    optax
    braceexpand
    black[jupyter]
    isort
