[metadata]
name = dalle-mini
version = attr: dalle_mini.__version__
author = Boris Dayma et al.
author_email = boris.dayma@gmail.com
description = DALL·E mini - Generate images from a text prompt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/borisdayma/dalle-mini
project_urls =
    Bug Tracker = https://github.com/borisdayma/dalle-mini/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Development Status :: 3 - Alpha
    Intended Audience :: Developers

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    transformers==4.25.1
    einops
    unidecode
    ftfy
    emoji
    pillow
    jax
    flax
    wandb

[options.extras_require]
dev =
    tqdm
    optax
    braceexpand
    datasets[streaming]
    black[jupyter]
    isort

[options.packages.find]
where = src
